--- a/views/Settings/SettingsView.xaml
+++ b/views/Settings/SettingsView.xaml
@@ -1,27 +1,41 @@
-﻿<UserControl x:Class="VpdbAgent.Views.SettingsView"
+﻿<UserControl x:Class="VpdbAgent.Views.Settings.SettingsView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:c="clr-namespace:VpdbAgent.Controls"
+      xmlns:v="clr-namespace:VpdbAgent.Views.Settings"
+      xmlns:vm="clr-namespace:VpdbAgent.ViewModels.Settings"
+      xmlns:typeConverters="clr-namespace:VpdbAgent.Common.TypeConverters"
+      xmlns:loading="clr-namespace:LoadingIndicators.WPF;assembly=LoadingIndicators.WPF"
+      xmlns:valueConverters="clr-namespace:VpdbAgent.Common.ValueConverters"
       mc:Ignorable="d" 
-      d:DesignHeight="1200" d:DesignWidth="800">
+      d:DesignHeight="1200" d:DesignWidth="800" d:DataContext="{d:DesignInstance Type=vm:SettingsViewModel}">
 
-    <Grid Margin="20">
+    <UserControl.Resources>
+        <typeConverters:BooleanToVisibilityConverter x:Key="TrueToVisible" True="Visible" False="Collapsed" />
+        <typeConverters:BooleanToVisibilityConverter x:Key="TrueToCollapsed" True="Collapsed" False="Visible" />
+        <valueConverters:InverseBooleanConverter x:Key="InverseBoolean" />
+    </UserControl.Resources>
+    
+    <Grid Margin="20,20,10,20">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <ScrollViewer>
+        <ScrollViewer Grid.Row="0" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+            <StackPanel Orientation="Vertical" Margin="0,0,10,0">
 
-            <StackPanel Orientation="Vertical">
-
-                <Label Content="Welcome!" HorizontalAlignment="Center" FontSize="36" FontWeight="Light" Foreground="{StaticResource PrimaryColorBrush}"/>
-                <TextBlock Style="{StaticResource Label}" Margin="50,10,50,0" TextAlignment="Center" TextWrapping="Wrap" Foreground="{StaticResource PrimaryColorBrush}">
+                <Label Visibility="{Binding Path=IsFirstRun, Converter={StaticResource TrueToVisible}}" Content="Welcome!" 
+                       Foreground="{StaticResource PrimaryColorBrush}" HorizontalAlignment="Center" FontSize="36" FontWeight="Light" />
+                <TextBlock Visibility="{Binding Path=IsFirstRun, Converter={StaticResource TrueToVisible}}" Style="{StaticResource Label}" 
+                           Foreground="{StaticResource PrimaryColorBrush}" TextAlignment="Center" TextWrapping="Wrap" Margin="50,10,50,0">
                     The client you have just installed will seriously make your life easier if you're running it on a 
                     Virtual Cabinet, but also if you just want to keep up with new tables on your desktop.
                 </TextBlock>
-                <TextBlock Style="{StaticResource Label}" Margin="50,10,50,25" TextAlignment="Center" TextWrapping="Wrap" Foreground="{StaticResource PrimaryColorBrush}">
+                <TextBlock Visibility="{Binding Path=IsFirstRun, Converter={StaticResource TrueToVisible}}" 
+                           Foreground="{StaticResource PrimaryColorBrush}" Style="{StaticResource Label}" 
+                           TextAlignment="Center" TextWrapping="Wrap" Margin="50,10,50,25">
                     In order to get going, we need two things from you: The folder where you installed PinballX and 
                     the API key from VPDB. You can configure both below. Scroll down if you want to further configure,
                     but you can do that later as well.
@@ -46,11 +60,16 @@
                     <Button x:Name="PinballXFolderButton" Content="CHOOSE FOLDER" ToolTip="We need to know where PinballX sits so we know where to look for your tables."
                             Grid.Column="2" Style="{StaticResource ButtonSolidLarge}" />
                 </Grid>
-                <StackPanel x:Name="PbxFolderErrorPanel" Orientation="Horizontal">
+                <Grid x:Name="PbxFolderErrorPanel">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
                     <c:IconControl Foreground="{StaticResource LightRedBrush}" Data="{StaticResource IconWarning}"
-                                   Height="18" Width="18" Margin="20,0,10,0" />
-                    <Label x:Name="PbxFolderError" Foreground="{StaticResource LightRedBrush}" Content="Error message"/>
-                </StackPanel>
+                                   Grid.Column="0" Height="18" Width="18" VerticalAlignment="Top" Margin="15,3,10,0" />
+                    <TextBlock x:Name="PbxFolderError" Style="{StaticResource Label}" Foreground="{StaticResource LightRedBrush}" 
+                               Grid.Column="1" Text="Error message" TextWrapping="Wrap"/>
+                </Grid>
 
                 <Label Content="VPDB Connection" Style="{StaticResource Header1}" Margin="0,20,0,0"/>
                 <Separator/>
@@ -58,22 +77,30 @@
                 <!-- API KEY -->
                 <Label Content="API Key" HorizontalAlignment="Left" />
                 <TextBox x:Name="ApiKey" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" ToolTip="You can get your API key on vpdb.io by browsing to Profile -> Application Access Tokens and generate one."/>
-                <StackPanel x:Name="ApiKeyErrorPanel" Orientation="Horizontal">
+                <Grid x:Name="ApiKeyErrorPanel">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
                     <c:IconControl Foreground="{StaticResource LightRedBrush}" Data="{StaticResource IconWarning}"
-                                   Height="18" Width="18" Margin="0,0,10,0" />
-                    <Label x:Name="ApiKeyError" Foreground="{StaticResource LightRedBrush}" Content="Error message"/>
-                </StackPanel>
-
+                                   Grid.Column="0" Height="18" Width="18" VerticalAlignment="Top" Margin="0,3,10,0" />
+                    <TextBlock x:Name="ApiKeyError" Style="{StaticResource Label}" Foreground="{StaticResource LightRedBrush}" 
+                               Grid.Column="1" Text="Error message" TextWrapping="Wrap"/>
+                </Grid>
+                
                 <!-- [X] Advanced Options -->
-                <CheckBox x:Name="ShowAdvancedOptions" Content="Show Advanced Options" FontSize="18" Margin="0,20,0,0"/>
+                <CheckBox IsChecked="{Binding ShowAdvancedOptions}"  Content="Show Advanced Options" FontSize="18" Margin="0,20,0,0"/>
 
                 <!-- API Endpoint -->
-                <Label x:Name="ApiEndpointLabel" Content="VPDB API Endpoint" HorizontalAlignment="Left" Margin="0,20,0,0"/>
-                <TextBox x:Name="Endpoint" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" ToolTip="In case you want to hit another instance of VPDB. Probably not."/>
+                <Label Content="VPDB API Endpoint" HorizontalAlignment="Left" Margin="0,20,0,0"
+                       Visibility="{Binding Path=ShowAdvancedOptions, Converter={StaticResource TrueToVisible}}" />
+                <TextBox x:Name="Endpoint" Visibility="{Binding Path=ShowAdvancedOptions, Converter={StaticResource TrueToVisible}}" 
+                         HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" ToolTip="In case you want to hit another instance of VPDB. Probably not."/>
 
                 <!-- HTTP Basic Auth -->
-                <Label x:Name="BasicAuthLabel" Content="HTTP Basic Auth" Margin="0,10,0,0" HorizontalAlignment="Left" />
-                <Grid x:Name="BasicAuth" >
+                <Label Content="HTTP Basic Auth" HorizontalAlignment="Left" Margin="0,10,0,0" 
+                       Visibility="{Binding Path=ShowAdvancedOptions, Converter={StaticResource TrueToVisible}}" />
+                <Grid Visibility="{Binding Path=ShowAdvancedOptions, Converter={StaticResource TrueToVisible}}" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="10"/>
@@ -82,17 +109,36 @@
                     <TextBox x:Name="AuthUser" Height="23" Grid.Column="0" ToolTip="In the beta phase, VPDB has an additional layer of authentication. Put the username here."/>
                     <TextBox x:Name="AuthPass" Height="23" Grid.Column="2" ToolTip="In the beta phase, VPDB has an additional layer of authentication. Put the password here."/>
                 </Grid>
-                <StackPanel x:Name="AuthErrorPanel" Orientation="Horizontal">
+                <Grid x:Name="AuthErrorPanel">
+                    <Grid.ColumnDefinitions><ColumnDefinition Width="Auto"/><ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
                     <c:IconControl Foreground="{StaticResource LightRedBrush}" Data="{StaticResource IconWarning}"
-                                   Height="18" Width="18" Margin="0,0,10,0" />
-                    <Label x:Name="AuthError" Foreground="{StaticResource LightRedBrush}" Content="Error message"/>
-                </StackPanel>
-
+                                   Grid.Column="0" Height="18" Width="18" VerticalAlignment="Top" Margin="0,3,10,0" />
+                    <TextBlock x:Name="AuthError" Style="{StaticResource Label}" Foreground="{StaticResource LightRedBrush}" 
+                               Grid.Column="1" Text="Error message" TextWrapping="Wrap"/>
+                </Grid>
             </StackPanel>
         </ScrollViewer>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <Button x:Name="CancelButton" Content="CANCEL" Margin="0,0,10,0" Style="{StaticResource ButtonLineLarge}"/>
-            <Button x:Name="SaveButton" Content="SAVE" Style="{StaticResource ButtonSolidPrimaryLarge}"/>
-        </StackPanel>
+        <Grid Grid.Row="1" Margin="0,10,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Viewbox Grid.Column="0" StretchDirection="Both" Stretch="Uniform" 
+                         Height="24" Width="24" HorizontalAlignment="Right" Margin="0,0,10,0">
+                <loading:LoadingIndicator x:Name="ProgressSpinner" IsActive="{Binding IsValidating}"
+                         Foreground="{StaticResource PrimaryColorBrush}" SpeedRatio="1"
+                         Style="{DynamicResource LoadingIndicatorArcsStyle}"/>
+            </Viewbox>
+            <Button Grid.Column="2" x:Name="CancelButton" Content="CANCEL" Margin="0,0,10,0" 
+                    Visibility="{Binding Path=IsFirstRun, Converter={StaticResource TrueToCollapsed}}"
+                    IsEnabled="{Binding CanCancel}"
+                    Style="{StaticResource ButtonLineLarge}" />
+            <Button Grid.Column="3" x:Name="SaveButton" Content="SAVE" Style="{StaticResource ButtonSolidPrimaryLarge}"
+                    IsEnabled="{Binding IsValidating, Converter={StaticResource InverseBoolean}}"/>
+        </Grid>
+
     </Grid>
 </UserControl>
