--- a/views/Settings/SettingsView.xaml
+++ b/views/Settings/SettingsView.xaml
@@ -137,7 +137,7 @@
                     IsEnabled="{Binding CanCancel}"
                     Style="{StaticResource ButtonLineLarge}" />
             <Button Grid.Column="3" x:Name="SaveButton" Content="SAVE" Style="{StaticResource ButtonSolidPrimaryLarge}"
-                    IsEnabled="{Binding IsValidating, Converter={StaticResource InverseBoolean}}"/>
+                    IsEnabled="{Binding IsValidating, Converter={StaticResource InverseBoolean}}" Margin="0,0,10,0"/>
         </Grid>
 
     </Grid>
