Layout- and folder changes.

--- a/views/MainView.xaml
+++ b/views/MainView.xaml
@@ -12,7 +12,7 @@
              d:DataContext="{d:DesignInstance Type=vm:MainViewModel}">
 
     <DockPanel LastChildFill="True">
-        <DockPanel DockPanel.Dock="Bottom" Margin="7,0,15,7">
+        <DockPanel DockPanel.Dock="Bottom" Margin="7,-5,15,7">
             <TextBlock DockPanel.Dock="Left" Style="{StaticResource Label}" FontSize="12" x:Name="Status" Text="Status info. All green." />
             <TextBlock DockPanel.Dock="Right" Style="{StaticResource Label}" TextAlignment="Right" FontSize="12" x:Name="LoginStatus" Text="Not logged." />
         </DockPanel>
