Replace UrlImage with CachedImage due to concurrency problems.

--- a/views/Games/GameItemView.xaml
+++ b/views/Games/GameItemView.xaml
@@ -29,7 +29,7 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <c:UrlImage UrlSource="{Binding File.Thumb.Url}" Width="70" Height="70"
+        <c:CachedImage ImageUrl="{Binding File.Thumb.Url}" Width="70" Height="70"
                     Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,10,0,0" />
 
         <StackPanel Grid.Column="1" Orientation="Vertical">
